# MECHIA

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
mechia-core/: CHANGELOG.md  Cargo.toml
mechia-core/examples/: agent_with_context.rs  agent_with_grok.rs  agent_with_loaders.rs  agent_with_ollama.rs  agent_with_tools.rs  gemini_agent.rs
mechia-core/rig-core-derive/: Cargo.toml
mechia-grok/: CHANGELOG.md  Cargo.toml
mechia-grok/examples/: qdrant_vector_search.rs
mechia-grok/src/: lib.rs
mechia-grok/tests/: integration_tests.rs
mechia-lancedb/: CHANGELOG.md  Cargo.toml
mechia-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
mechia-lancedb/examples/fixtures/: lib.rs
mechia-lancedb/src/: lib.rs
mechia-lancedb/src/utils/: deserializer.rs  mod.rs
mechia-lancedb/tests/: integration_tests.rs
mechia-lancedb/tests/fixtures/: lib.rs
mechia-openai/: Cargo.toml
mechia-openai/examples/: vector_search_sqlite.rs
mechia-openai/src/: lib.rs
