[package]
name = "mechia-lancedb"
version = "0.2.1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "mechia vector store index integration for LanceDB."
repository = "https://github.com/mechia/mechia"

[dependencies]
lancedb = "0.10.0"
mechia-core = { path = "../mechia-core", version = "0.6.0" }
arrow-array = "52.2.0"
serde_json = "1.0.128"
serde = "1.0.210"
futures = "0.3.30"

[dev-dependencies]
tokio = "1.40.0"
anyhow = "1.0.89"

[[example]]
name = "vector_search_local_ann"
required-features = ["mechia-core/derive"]

[[example]]
name = "vector_search_local_enn"
required-features = ["mechia-core/derive"]

[[example]]
name = "vector_search_s3_ann"
required-features = ["mechia-core/derive"]

[[test]]
name = "integration_tests"
required-features = ["mechia-core/derive"]
